fix bug of order button not showing up after 1) new order is created 2) click another link on side nav 3) click checkout link 4) try to order something

--- a/app/assets/stylesheets/customers.css.scss
+++ b/app/assets/stylesheets/customers.css.scss
@@ -120,3 +120,7 @@
 		}
 	}
 }
+
+.order-form{
+	display: none;
+}
